# AstraSim

./: CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build.yml
astrasim/: __init__.py  cli.py
astrasim/control/: pid.py
astrasim/demos/: __init__.py  aircraft_stability.py  custom_component.py  rocket_launch.py
astrasim/visualization/: __init__.py  viewer.py
include/astrasim/physics/: aerodynamics.hpp  environment.hpp  rigid_body.hpp
src/bindings/: python_bindings.cpp
src/physics/: aerodynamics.cpp  environment.cpp  rigid_body.cpp
tests/: test_rigid_body.cpp
